Changed volume name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - job_fusion_data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
