--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       MYSQL_USER: dev_user123
       MYSQL_PASSWORD: dev_pass123
     ports:
-      - "3307:3306"
+      - "${DB_PORT}:3306"
     volumes:
       - job_fusion_data:/var/lib/mysql
 
